kustomize/sd3-ch/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd3-ch-frontend
  labels:
    app: sd3-ch-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd3-ch-frontend
  template:
    metadata:
      labels:
        app: sd3-ch-frontend
    spec:
      containers:
      - name: sd3-ch-frontend
        image: sd3-ch-frontend
        command:
          ["/bin/sh", "-c"]
        args:
          ['nginx -g "daemon off;"']
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
